--- a/pdf.html
+++ b/pdf.html
@@ -86,7 +86,7 @@
     <div class="container" data-aos="fade-up" data-aos-delay="100">  
       <div class="card-body p-0">
       <div class="table-responsive-lg ">
-        <table border="1" width="100%" height="600 align="center" class="tableUserInfo">
+        <!-- <table border="1" width="100%" height="600 align="center" class="tableUserInfo">
           <tr>
             <td align="center">
 
@@ -98,7 +98,7 @@
 
             </td>
 
-        </table>
+        </table> -->
         <object data="assets/pdf/pec.pdf" type="application/pdf" width="100%" height="600 align="center">
           
         </object>
