--- a/news1.html
+++ b/news1.html
@@ -55,7 +55,7 @@
           <li><a href="index.html#hero" class="active">Halaman Depan</a></li>
           <li><a href="index.html#about">Tentang Elektronika</a></li>
           <li><a href="index.html#services">Materi Elektronika</a></li>
-          <li><a href="product.html#product">Hasil Karya Siswa</a></li>
+          <li><a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
           <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
           <li><a href="pinjam.html#alat">Peminjaman Alat</a></li>
@@ -169,7 +169,7 @@
             <li><i class="bi bi-chevron-right"></i> <a href="index.html#hero" >Halaman Depan</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html#about">Tentang Elektronika</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html#services">Materi Elektronika</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="product.html#product">Hasil Karya Siswa</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="team.html#team">Team Elektronika</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="pinjam.html#alat">Peminjaman Alat</a></li>
