--- a/pkl.html
+++ b/pkl.html
@@ -53,7 +53,7 @@
         <ul>
           <li><a href="index.html#hero" class="active">Halaman Depan</a></li>
           <li><a href="index.html#about">Tentang Elektronika</a></li>
-          <li><a href="index.html#services">Materi Elektronika</a></li>
+          <li><a href="materi.html#materi">Materi Elektronika</a></li>
           <li><a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
           <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
@@ -251,7 +251,7 @@
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html#hero" >Halaman Depan</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html#about">Tentang Elektronika</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="index.html#services">Materi Elektronika</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="materi.html#materi">Materi Elektronika</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="team.html#team">Team Elektronika</a></li>
