--- a/pasif.html
+++ b/pasif.html
@@ -53,7 +53,7 @@
         <ul>
           <li><a href="index.html#hero" >Halaman Depan</a></li>
           <li><a href="index.html#about">Tentang Elektronika</a></li>
-          <li><a href="index.html#services">Materi Elektronika</a></li>
+          <li><a href="materi.html#materi">Materi Elektronika</a></li>
           <li><a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
           <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
@@ -76,10 +76,13 @@
       </div>
 
     </section><!-- /Hero Section -->
-    <section id="pdf" class="team section light-background">
+    <section id="pasif" class="team section light-background">
       <div class="container section-title" data-aos="fade-up">
         <h2>Materi</h2>
-        <p>Materi ELEKTRONIKA<br></p>
+        <p>Materi ELEKTRONIKA : Komponen Pasif<br></p>
+        <h4 style="text-align: center;" >Sumber : Indonesia Australia Partnership for Skills Development Page 
+          Batam Institutional Development Project
+          Package for Electronic Components and Devices-FV.revision.doc<br></h4>
       </div><!-- End Section Title -->
       
         <!-- Table -->
@@ -99,7 +102,7 @@
             </td>
 
         </table> -->
-        <object data="assets/pdf/pec.pdf" type="application/pdf" width="100%" height="600 align="center">
+        <object data="assets/pdf/pasif.pdf" type="application/pdf" width="100%" height="600 align="center">
           
         </object>
         <!-- <object data="assets/pdf/pec.pdf" width="500" height="400"></object>
@@ -150,7 +153,7 @@
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html#hero" >Halaman Depan</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="index.html#about">Tentang Elektronika</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="index.html#services">Materi Elektronika</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="materi.html#materi">Materi Elektronika</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="team.html#team">Team Elektronika</a></li>
