--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
                 <div class="icon">
                   <i class="bi bi-broadcast"></i>
                 </div>
-                <a href="pasif.html#pasif" class="stretched-link">
+                <a href="alatukur.html#alatukur" class="stretched-link">
                   <h3>Alat Ukur</h3>
                 </a>
                 <ul>
@@ -378,7 +378,7 @@
                 <div class="icon">
                   <i class="bi bi-easel"></i>
                 </div>
-                <a href="pdf.html#pdf" class="stretched-link">
+                <a href="pasif.html#pasif" class="stretched-link">
                   <h3>Komponen Aktif & Pasif</h3>
                 </a>
                 <ul>
