--- a/pasif.html
+++ b/pasif.html
@@ -79,7 +79,7 @@
     <section id="pasif" class="team section light-background">
       <div class="container section-title" data-aos="fade-up">
         <h2>Materi</h2>
-        <p>Materi ELEKTRONIKA : Komponen Pasif<br></p>
+        <p>Materi ELEKTRONIKA : Komponen Aktif & Pasif<br></p>
         <h4 style="text-align: center;" >Sumber : Indonesia Australia Partnership for Skills Development Page 
           Batam Institutional Development Project
           Package for Electronic Components and Devices-FV.revision.doc<br></h4>
