--- a/pasif.html
+++ b/pasif.html
@@ -51,14 +51,13 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html#hero" >Halaman Depan</a></li>
-          <li><a href="index.html#about">Tentang Elektronika</a></li>
-          <li><a href="materi.html#materi">Materi Elektronika</a></li>
+          <li><a href="index.html#about" class="active">Tentang Elektronika</a></li>
+          <li><a href="lsp.html#lsp">LSP</a></li>
+          <li><a href="index.html#materi">Materi Elektronika</a></li>
           <li><a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
           <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
-          <li><a href="pinjam.html#alat"class="active">Peminjaman Alat</a></li>
-        
+          <li><a href="pinjam.html#alat">Peminjaman Alat</a></li>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
