--- a/gerbang-dash.html
+++ b/gerbang-dash.html
@@ -51,9 +51,9 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html#hero" class="active">Halaman Depan</a></li>
-          <li><a href="index.html#about">Tentang Elektronika</a></li>
-          <li><a href="materi.html#materi">Materi Elektronika</a></li>
+          <li><a href="index.html#about" >Tentang Elektronika</a></li>
+          <li><a href="lsp.html#lsp">LSP</a></li>
+          <li><a href="index.html#materi">Materi Elektronika</a></li>
           <li><a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
           <li><a href="pkl.html#pkl">Praktik Kerja Lapangan</a></li>
           <li><a href="team.html#team">Team Elektronika</a></li>
