--- a/lsp.html
+++ b/lsp.html
@@ -52,7 +52,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="index.html#about" >Tentang Elektronika</a></li>
+          <li><a href="index.html#about">Tentang Elektronika</a></li>
           <li><a href="lsp.html#lsp">LSP</a></li>
           <li><a href="index.html#materi">Materi Elektronika</a></li>
           <li><a href="product.html#product">Kegiatan & Hasil Karya Siswa</a></li>
@@ -114,41 +114,160 @@
         <div class="row gy-4">
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
 
-            <h3>Program Keahlian Elektronika</h3>
-            <P class="MsoNormal" style="text-align: center;"><b>VISI</b></P>
-            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">“Menjadi program keahlian yang
-              unggul, inovatif, dan berdaya saing dalam bidang elektronika audio video dan elektronika industri, serta
-              menghasilkan lulusan yang kompeten, berkarakter, dan siap menghadapi perkembangan teknologi global.”
-            </p>
-            <P class="MsoNormal" style="text-align: center;"><b>MISI</b></P>
-            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">Menyelenggarakan pendidikan dan
-              pelatihan yang berbasis kompetensi sesuai standar industri di bidang elektronika audio video dan
-              elektronika industri.
+            <h3>LSP P1 SMK NEGERI 1 MAGELANG </h3>
+            <h4>SKEMA SERTIFIKASI</h4>
+            <h4>KOMPETENSI KEAHLIAN ELEKTRONIKA INDUSTRI</h4>
+            <h6>Unit Skema: Perakit Peralatan Elektronik
+            </h6>
 
-              Mengembangkan keterampilan peserta didik dalam bidang perakitan, instalasi, pemrograman, perawatan, dan
-              perbaikan sistem elektronika audio video serta elektronika industri.
+            <div class="card shadow-sm">
+              <div class="card-body p-0">
+                <div class="table-responsive">
+                  <table class="table table-striped table-hover m-0" id="logTable">
+                    <thead class="table-dark">
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Kode Unit</th>
+                        <th scope="col">Nama</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>C.26EPP00.016.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Membaca dan Mengidentifikasi Komponen Elektronika
+                            Pasif</a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>C.26EPP00.017.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Membaca dan Mengidentifikasi Komponen Elektronika
+                            Aktif
+                          </a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>C.26EPP00.018.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Merancang Rangkaian Elektronika Dasar
+                          </a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">4</th>
+                        <td>C.26EPP00.020.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Merancang Prototipe Elektronika pada Protoboard</a>
+                        </td>
+                      </tr>
+                      <tr>
+                        <th scope="row">5</th>
+                        <td>C.26EPP00.021.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Menggambar Layout Printed Circuit Board (PCB) Dengan
+                            Menggunakan Software
+                          </a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">6</th>
+                        <td>C.26EPP00.026.1 </td>
+                        <td><a href="kelistrikan.html#kelistrikan">Melakukan pabrikasi PCB Secara Manual
+                          </a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">7</th>
+                        <td>C.26EPP00.010.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Mengoperasikan Peralatan ukur Elektronika</a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">8</th>
+                        <td>C.26EPP00.004.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Memasang Komponen Elektronika pada PCB Secara Manual
+                          </a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">9</th>
+                        <td>C.26EPP00.005.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Melakukan Teknik Penyolderan Lead-Free Komponen
+                            Through Hole pada PCB
+                          </a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">10</th>
+                        <td>C.26EPP00.001.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Menerapkan Prosedur Keamanan, Kesehatan dan
+                            Keselamatan Kerja (K3) Elektronika</a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">11</th>
+                        <td>C.26EPP00.003.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Memelihara Kebersihan Tempat Kerja Elektronika
+                          </a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">12</th>
+                        <td>C.26EPP00.002.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Memelihara peralatan kerja elektronika
+                          </a></td>
+                      </tr>
+                      <tr>
+                        <th scope="row">13</th>
+                        <td>C.26EPP00.007.1</td>
+                        <td><a href="kelistrikan.html#kelistrikan">Memasang Pengkabelan/Wiring Assembly Elektronika</a>
+                        </td>
+                      </tr>
 
-              Menanamkan sikap disiplin, tanggung jawab, dan etos kerja yang sesuai dengan budaya kerja industri.
+                    </tbody>
+                  </table>
 
-              Menjalin kerjasama dengan dunia usaha, dunia industri, dan perguruan tinggi dalam pengembangan kurikulum,
-              praktik kerja lapangan, dan penyerapan tenaga kerja.
+                  <!-- <table class="table">
+              <thead class="thead-light">
+                <tr>
+                  <th scope="col">#</th>
+                  <th scope="col">First</th>
+                  <th scope="col">Last</th>
+                  <th scope="col">Handle</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <th scope="row">1</th>
+                  <td>Mark</td>
+                  <td>Otto</td>
+                  <td>@mdo</td>
+                </tr>
+                <tr>
+                  <th scope="row">2</th>
+                  <td>Jacob</td>
+                  <td>Thornton</td>
+                  <td>@fat</td>
+                </tr>
+                <tr>
+                  <th scope="row">3</th>
+                  <td>Larry</td>
+                  <td>the Bird</td>
+                  <td>@twitter</td>
+                </tr>
+              </tbody>
+            </table> -->
+                </div>
+              </div>
+            </div>
 
-              Mendorong inovasi dan kreativitas peserta didik melalui kegiatan penelitian terapan, proyek kewirausahaan,
-              dan lomba keterampilan siswa.
-
-              Membentuk lulusan yang memiliki kompetensi global, berwawasan lingkungan, serta siap bersaing di era
-              industri 4.0 dan society 5.0.
-            </p>
-
-            <img src="assets/img/about.jpg" class="img-fluid rounded-4 mb-4" alt="">
 
 
-            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">Program Keahlian Elektronika adalah
-              bidang studi dalam rumpun teknik (engineering) yang mempelajari
-              teori, prinsip, desain, dan aplikasi dari perangkat serta sistem elektronika. Jurusan ini biasanya ada di
-              SMK (Sekolah Menengah Kejuruan), Politeknik, maupun Perguruan Tinggi dengan fokus yang berbeda-beda.
-              Berikut penjelasan secara terperinci:</p>
-            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">1. Pengertian Elektronika
+            <div class="position-relative mt-4">
+              <img src="assets/img/lsp/lsp-3.jpg" class="img-fluid rounded-4 mb-4" alt="">
+            </div>
+
+
+            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">Lembaga Sertifikasi Profesi (LSP) P1
+              SMK Negeri 1 Magelang telah berhasil melaksanakan uji sertifikasi kompetensi sebagai bentuk nyata dari
+              penerapan standar kompetensi kerja nasional di lingkungan pendidikan vokasi. Program Keahlian Elektronika,
+              khususnya Kompetensi Keahlian Elektronika Industri, turut serta aktif dalam kegiatan ini dengan
+              menghadirkan peserta didik terbaiknya untuk diuji sesuai dengan bidang keahliannya. Pelaksanaan LSP P1 ini
+              menjadi langkah penting dalam memastikan lulusan memiliki pengakuan resmi terhadap keterampilan dan
+              kompetensi yang dimilikinya, sehingga siap bersaing di dunia kerja maupun melanjutkan pendidikan ke
+              jenjang yang lebih tinggi.
+              :</p>
+
+            <!-- <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">1. Pengertian Elektronika
 
               Elektronika adalah cabang ilmu yang mempelajari penggunaan arus listrik kecil untuk mengendalikan,
               memproses, dan mentransmisikan informasi. Bedanya dengan listrik murni (elektro tenaga), elektronika lebih
@@ -234,10 +353,10 @@
                 Jurusan Elektronika mengajarkan bagaimana memanfaatkan ilmu listrik dan teknologi untuk merancang,
                 membuat, serta memperbaiki perangkat elektronik yang berguna dalam kehidupan sehari-hari maupun
                 industri.
-              </p>
+              </p> -->
 
               <div class="position-relative mt-4">
-                <img src="assets/img/about-2.jpg" class="img-fluid rounded-4" alt="">
+                <img src="assets/img/lsp/lsp-2.jpg" class="img-fluid rounded-4" alt="">
                 <a href="https://www.youtube.com/watch?v=bEcTSQrfqNI&ab_channel=SmartHomeElka"
                   class="glightbox pulsating-play-btn"></a>
               </div>
@@ -249,7 +368,7 @@
 
     </section><!-- /About Section -->
 
-    
+
     </div>
 
     </div>
@@ -262,7 +381,7 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>Materi</h2>
-        <p>ELEKTRONIKA<br></p>
+        <p>LSP<br></p>
       </div><!-- End Section Title -->
 
 
@@ -316,7 +435,7 @@
                       Alat ukur elektronik adalah perkakas yang dirancang untuk mendeteksi dan mengukur berbagai besaran
                       atau parameter listrik dan elektronika, seperti tegangan, arus, daya, dan hambatan.
                     </span>
-                 
+
 
                 </ul>
               </div>
