--- a/lsp.html
+++ b/lsp.html
@@ -117,6 +117,16 @@
             <h3>LSP P1 SMK NEGERI 1 MAGELANG </h3>
             <h4>SKEMA SERTIFIKASI</h4>
             <h4>KOMPETENSI KEAHLIAN ELEKTRONIKA INDUSTRI</h4>
+
+            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">Lembaga Sertifikasi Profesi (LSP) P1
+              SMK Negeri 1 Magelang telah berhasil melaksanakan uji sertifikasi kompetensi sebagai bentuk nyata dari
+              penerapan standar kompetensi kerja nasional di lingkungan pendidikan vokasi. Program Keahlian Elektronika,
+              khususnya Kompetensi Keahlian Elektronika Industri, turut serta aktif dalam kegiatan ini dengan
+              menghadirkan peserta didik terbaiknya untuk diuji sesuai dengan bidang keahliannya. Pelaksanaan LSP P1 ini
+              menjadi langkah penting dalam memastikan lulusan memiliki pengakuan resmi terhadap keterampilan dan
+              kompetensi yang dimilikinya, sehingga siap bersaing di dunia kerja maupun melanjutkan pendidikan ke
+              jenjang yang lebih tinggi.
+              :</p>
             <h6>Unit Skema: Perakit Peralatan Elektronik
             </h6>
 
@@ -253,19 +263,13 @@
 
 
             <div class="position-relative mt-4">
+              <h5>Dokumentasi Kegiatan
+              </h5>
               <img src="assets/img/lsp/lsp-3.jpg" class="img-fluid rounded-4 mb-4" alt="">
             </div>
 
 
-            <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">Lembaga Sertifikasi Profesi (LSP) P1
-              SMK Negeri 1 Magelang telah berhasil melaksanakan uji sertifikasi kompetensi sebagai bentuk nyata dari
-              penerapan standar kompetensi kerja nasional di lingkungan pendidikan vokasi. Program Keahlian Elektronika,
-              khususnya Kompetensi Keahlian Elektronika Industri, turut serta aktif dalam kegiatan ini dengan
-              menghadirkan peserta didik terbaiknya untuk diuji sesuai dengan bidang keahliannya. Pelaksanaan LSP P1 ini
-              menjadi langkah penting dalam memastikan lulusan memiliki pengakuan resmi terhadap keterampilan dan
-              kompetensi yang dimilikinya, sehingga siap bersaing di dunia kerja maupun melanjutkan pendidikan ke
-              jenjang yang lebih tinggi.
-              :</p>
+            
 
             <!-- <p class="MsoNormal" style="text-align: justify; text-indent: 0.5in;">1. Pengertian Elektronika
 
